--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <aside>
         <h2>About Me</h2>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, debitis earum molestias veniam suscipit aliquam totam exercitationem tempore neque vitae. Minima, corporis pariatur facere at quo porro beatae similique! Odit.</p>
+        <p>  Treat every day as a gift </p>
     </aside>
       <!-- end of new content -->
    <footer>
