update about me section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <aside>
         <h2>About Me</h2>
 
-        <p>  Treat every day as a gift </p>
+        <p>  Treat every day as a gift and have good people in your life </p>
     </aside>
 
     <footer>
